[tool.poetry]
name = "pyolov3"
version = "0.1.2"
description = "A PyTorch implementation of the YOLO v3 object detection algorithm"
authors = ["reeve0930 <reeve0930@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reeve0930/pyolov3"
keywords = ["yolo", "yolo-v3"] 

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.4.0"
torchvision = "0.5.0"
opencv-python = "^4.2.0"
wget = "^3.2"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
